--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -49,6 +49,8 @@
   <link rel="stylesheet" href="/css/tribute.css" />
   <script src="/js/tribute.js"></script>
 
+  <script src="/js/html5sortable.min.js"></script>
+
   <script src="//cdn.jsdelivr.net/npm/medium-editor@latest/dist/js/medium-editor.min.js"></script>
   <link rel="stylesheet" href="//cdn.jsdelivr.net/npm/medium-editor@latest/dist/css/medium-editor.min.css" type="text/css" media="screen" charset="utf-8">
   <link rel="stylesheet" href="/css/beagle.min.css" />
