--- a/views/partials/newreplyform.handlebars
+++ b/views/partials/newreplyform.handlebars
@@ -5,7 +5,7 @@
   <div class="form-row my-2 card p-1 replyEmojiWindow" style="display:none">
     {{> emojilist }}
   </div>
-  <div id="image-preview-holder" class="form-row post-controls">
+  <div id="image-preview-holder" class="form-row post-controls image-preview-holder">
     <input type="file" class="file-input" accept="image/gif, image/jpeg, image/png" aria-label="Choose File" name="postImage" multiple>
   </div>
   <div id="replyControlsRow" class="form-row mt-2 post-controls">
