disable drag-and-dropping images into text areas

--- a/views/partials/helperscripts.handlebars
+++ b/views/partials/helperscripts.handlebars
@@ -94,6 +94,7 @@ $(function() {
 
   var editor = new MediumEditor('.editable-text', {
     buttonLabels: 'fontawesome',
+    imageDragging: false,
     toolbar: {
       buttons: ['bold', 'italic', 'quote', 'unorderedlist', 'anchor']
     },
