this code brought to you by: too many m&ms

--- a/views/partials/newpostform.handlebars
+++ b/views/partials/newpostform.handlebars
@@ -16,7 +16,7 @@
     <textarea class="form-control mb-3" name="postImageDescription" id="postImageDescription" placeholder="Describe this image for people using screen readers." {{#if sessionFlash.errorImageDescription }}value="{{sessionFlash.errorImageDescription}}" {{/if}}></textarea>
     <div class="image-preview-controls">
       <a href="javascript:void(0)" class="image-control image-clear" title="Clear image"><i class="fas fa-times"></i></a>
-      <a href="javascript:void(0)" class="image-control image-move" title="Move image"><i class="fas fa-arrows-alt"></i></a>
+      <a href="javascript:void(0)" class="image-control image-move" title="Move image" ondragstart="return false;" ondrop="return false;"><i class="fas fa-arrows-alt"></i></a>
     </div>
   </div>
 
