--- a/views/partials/uploadscripts.handlebars
+++ b/views/partials/uploadscripts.handlebars
@@ -208,7 +208,7 @@ $(function() {
     selectedImage.css("width",selectedImage.width()+"px");
     selectedImage.css("height",selectedImage.height()+"px");
 
-    var imagecont = selectedImage.clone();
+    var imagecont = selectedImage.clone(true,true);
 
     selectedImage.addClass("imagecontspacer");
 
