--- a/views/partials/uploadscripts.handlebars
+++ b/views/partials/uploadscripts.handlebars
@@ -208,7 +208,8 @@ $(function() {
     selectedImage.css("width",selectedImage.width()+"px");
     selectedImage.css("height",selectedImage.height()+"px");
 
-    var imagecont = selectedImage.clone(true,true);
+    var imagecont = selectedImage.clone();
+    imagecont.find('.image-move')[0].addEventListener('touchstart',touchstartforimagemove,{passive:false});
 
     selectedImage.addClass("imagecontspacer");
 
