Button color consistency

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -187,14 +187,17 @@ hr {
 .comment-button {
   color: #aaa;
 }
-.comment-button:hover {
+.comment-button:hover,
+.comment-button:active {
   /* color: #0069d9; */
   color: #cb5e4c;
 }
-.btn-link:hover {
+.btn-link:hover,
+.btn-link:active {
   color: #cb5e4c;
 }
-.btn-primary:hover {
+.btn-primary:hover,
+.btn-primary:active {
   color: #fff;
   background-color: #cb5e4c;
   border-color: #b06357;
