--- a/views/partials/newpostform.handlebars
+++ b/views/partials/newpostform.handlebars
@@ -1,5 +1,5 @@
 <div class="contentForm" id="postForm" {{#if isMember}}communityid="{{communityData._id}}" {{/if}}>
-
+  <div class="form-row mobile-formatting-toolbar-container"></div>
   <div class="form-row">
     <textarea required class="editable-post-content editable-text" id="postContent" name="postContent" style="resize: none;" placeholder="Write something.">{{sessionFlash.errorContent}}</textarea>
   </div>
