--- a/views/settings.handlebars
+++ b/views/settings.handlebars
@@ -10,6 +10,13 @@
           <option value="profileAndPosts" {{#eq loggedInUserData.settings.profileVisibility "profileAndPosts"}}selected{{/eq}}>Profile and public posts visible to logged out users</option>
         </select>
       </div>
+      <div class="form-group">
+        <label for="newPostPrivacy">Default privacy for new posts</label>
+        <select name="newPostPrivacy" class="form-control" id="newPostPrivacy">
+          <option value="public" {{#eq loggedInUserData.settings.newPostPrivacy "public"}}selected{{/eq}}>Public</option>
+          <option value="private" {{#eq loggedInUserData.settings.newPostPrivacy "private"}}selected{{/eq}}>Private</option>
+        </select>
+      </div>
       <button type="submit" class="btn btn-secondary">Save settings</button>
     </form>
   </div>
