--- a/public/css/style.css
+++ b/public/css/style.css
@@ -695,9 +695,14 @@ hr {
     padding: 0;
     margin: 0 0 10px 0;
     list-style: none;
-    display: flex;
+    /* display: flex; */
     justify-content: flex-start;
     flex-wrap: wrap;
+}
+
+.user-list.collapse.show,
+.user-list.collapsing {
+  display: flex !important;
 }
 
 .user-list li {
@@ -713,6 +718,21 @@ hr {
   height: 30px;
   border-radius: 4px;
   margin: 2px;
+}
+
+.user-list-toggle:hover{
+  text-decoration: none;
+}
+.user-list-toggle::before{
+  font-family: "Font Awesome 5 Free";
+  font-weight: 900;
+  content: '\f0dd';
+  margin-left: 5px;
+}
+
+.user-list-toggle.collapsed::before{
+  font-family: "Font Awesome 5 Free";
+  content: '\f0da';
 }
 
 .btn-group-full-width {
