--- a/views/partials/notifications.handlebars
+++ b/views/partials/notifications.handlebars
@@ -18,8 +18,8 @@
 
   <script type="text/javascript">
     if (notificationsCount > 0) {
-      $(".notifications-count").text(notificationsCount);
-      document.title = '(' + notificationsCount + ') sweet';
+      $(".notifications-count").html("&bull;");
+      document.title = '(⚐) sweet';
     }
     else {
       $(".notifications-count").text('');
