moved uploads scripts to main, moved newpostform

--- a/views/partials/uploadscripts.handlebars
+++ b/views/partials/uploadscripts.handlebars
@@ -1,5 +1,18 @@
+<!-- cloned in the script below to make the image previews -->
+<div class="newimageform">
+  <div class="image-preview"></div>
+  <textarea class="form-control mb-3" name="postImageDescription" id="postImageDescription" placeholder="Describe this image for people using screen readers." {{#if sessionFlash.errorImageDescription }}value="{{sessionFlash.errorImageDescription}}" {{/if}}></textarea>
+  <div class="image-preview-controls">
+    <a href="javascript:void(0)" class="image-control image-clear" title="Clear image"><i class="fas fa-times"></i></a>
+    <a href="javascript:void(0)" class="image-control image-move" title="Move image" ondragstart="return false;" ondrop="return false;"><i class="fas fa-arrows-alt"></i></a>
+  </div>
+</div>
 <script type="text/javascript">
+
 $(function() {
+
+  //NEW POST FORM CODE
+
   $(".editable-post-content").focus(function(){
     $(".post-controls").css('display', 'flex');
   })
