temporary commit of medium toolbar stuff

--- a/views/partials/helperscripts.handlebars
+++ b/views/partials/helperscripts.handlebars
@@ -92,7 +92,31 @@ $(function() {
 
   // RICH TEXT EDITOR INIT
 
-  var editor = new MediumEditor('.editable-text', {
+  
+  if($(window).width() <= 768){
+    var relativethingy = document.getElementsByClassName('mobile-formatting-toolbar-container')[0];
+    mobileEditorToolbarOptions = {
+      toolbar: {
+        buttons: ['bold', 'italic', 'quote', 'unorderedlist', 'anchor'],
+        relativeContainer: relativethingy,
+        /*static: true,
+        sticky: true,*/
+      },
+        placeholder:
+        {text: "Just write a thing! (tm)"}
+      };
+    
+    editor = new MediumEditor('.editable-text',mobileEditorToolbarOptions)
+    /*editor.subscribe('focus', function (event, editable) {
+      $(event.target).closest('.contentForm').find('.mobile-formatting-toolbar-container').show()
+      $(event.target).css('padding-top','40px')
+    })
+    editor.subscribe('blur', function (event, editable) {
+      $(editable).closest('.contentForm').find('.mobile-formatting-toolbar-container').hide()
+      $(editable).css('padding-top','.375rem')
+    })*/
+  }else{
+    var editor = new MediumEditor('.editable-text', {
     buttonLabels: 'fontawesome',
     imageDragging: false,
     toolbar: {
@@ -121,25 +145,6 @@ $(function() {
         text: 'Write something. Highlight text to format.'
     }
   });
-  if($(window).width() <= 768){
-    mobileEditorToolbarOptions = {
-      buttons: ['bold', 'italic', 'quote', 'unorderedlist', 'anchor'],
-      updateOnEmptySelection: true,
-      // relativeContainer: document.getElementById('mobile-formatting-toolbar-container')
-      static: true,
-      sticky: true
-    };
-    editor.destroy();
-    editor.options.toolbar = mobileEditorToolbarOptions;
-    editor.setup();
-    editor.subscribe('focus', function (event, editable) {
-      $(event.target).closest('.contentForm').find('.mobile-formatting-toolbar-container').show()
-      $(event.target).css('padding-top','40px')
-    })
-    editor.subscribe('blur', function (event, editable) {
-      $(editable).closest('.contentForm').find('.mobile-formatting-toolbar-container').hide()
-      $(editable).css('padding-top','.375rem')
-    })
   }
 });
 </script>
