I think this works fine now *vanishes again*

--- a/views/partials/helperscripts.handlebars
+++ b/views/partials/helperscripts.handlebars
@@ -97,7 +97,7 @@ $(function() {
     imageDragging: false,
     toolbar: {
       buttons: ['bold', 'italic', 'quote', 'unorderedlist', 'anchor'],
-      // diffTop: 70
+      diffTop: 70
     },
     keyboardCommands: {
       commands: [
@@ -118,28 +118,12 @@ $(function() {
       ],
     },
     placeholder: {
-        text: 'Write something. Highlight text to format.'
+        text: 'Write something, highlight text to format.'
+    },
+    paste: {
+      forcePlainText: true,
+      cleanPastedHTML: true
     }
   });
-  if($(window).width() <= 768){
-    mobileEditorToolbarOptions = {
-      buttons: ['bold', 'italic', 'quote', 'unorderedlist', 'anchor'],
-      updateOnEmptySelection: true,
-      // relativeContainer: document.getElementById('mobile-formatting-toolbar-container')
-      static: true,
-      sticky: true
-    };
-    editor.destroy();
-    editor.options.toolbar = mobileEditorToolbarOptions;
-    editor.setup();
-    editor.subscribe('focus', function (event, editable) {
-      $(event.target).closest('.contentForm').find('.mobile-formatting-toolbar-container').show()
-      $(event.target).css('padding-top','40px')
-    })
-    editor.subscribe('blur', function (event, editable) {
-      $(editable).closest('.contentForm').find('.mobile-formatting-toolbar-container').hide()
-      $(editable).css('padding-top','.375rem')
-    })
-  }
 });
 </script>
