--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1388,14 +1388,8 @@ background-size: 5.66px 5.66px;
   content: '\f054'
 } */
 
-.mobile-formatting-toolbar-container {
-  height:40px;
-  width:100%;
-  display: none;
-}
-
-/* .medium-toolbar-arrow-under::after {
+.medium-toolbar-arrow-under::after {
   border-color: transparent transparent #000 transparent !important;
   top: -8px !important;
   border-width: 0 8px 8px 8px !important;
-} */
+}
